# unpast_paper

./: .gitignore  DESMOND2_step_by_step.ipynb  Dockerfile  README.md  Th2_asthma_performance.ipynb  UnPaSt_example.ipynb  UnPaSt_examples.ipynb  consensus.ipynb  evaluation_on_real_data.ipynb  evaluation_on_simulated_data.ipynb  method.py  method2.py  permutations.ipynb  pgm.py  pyproject.toml  random_data_example.ipynb  requirements.txt  run_WGCNA.R  run_desmond.py  run_unpast.py  run_unpast_on_subsampled.ipynb  survival.ipynb  survival_and_association_with_sex.ipynb
data/: known_subtypes_and_risk_scores_genefu.ipynb  preprocess_data_v5.ipynb
evaluation/: clusterings_evaluation_on_real_data.ipynb  evaluation_on_simulated_data.ipynb
figures/: generate_paper_figures.py  plot_paper_figures.ipynb  plotting_utils.py  requirements.txt  settings.py
figures_s2-s5/: README.md  parameter_finder.py
notebooks/: ANCA-GN_spatial_analysis.ipynb  BRCA_multi-omics.ipynb  Bicluster - sample metadata associations.ipynb  FigSX_toy_data_biclustering_vs_clustering.ipynb  ORA_matched_biclusters_in_TCGA_and_METABRIC.ipynb  Th2_asthma_analysis-Copy2.ipynb  UnPaSt_DIP.ipynb  UnPaSt_asthma_GSE4302_and_GSE89809.ipynb  UnPaSt_examples.ipynb  UnPaSt_simulated_data_ABC.ipynb  all_cancers_TCGA_recurrent_biclusters.ipynb  all_cancers_TCGA_survival.ipynb  asthma_analysis.ipynb  breast_cancer_analysis_TCGA_and_METABRIC.ipynb  consensus.ipynb  evaluation_on_simulated_data.ipynb  figure_examples.ipynb  plot_method_performances_Fig3.ipynb  run_unpast_for_all_TCGA_cancers.ipynb  simulated_data.ipynb  (+3 more)
(+223 files in other folders)
